# extinction_ensemble_props

./: .readthedocs.yml  MANIFEST.in  README.rst  plot_1d_distributions.py  pyproject.toml  tox.ini
.github/workflow/: tox-tests.yml
.github/workflows/: tox-tests.yml
docs/: conf.py  datasets.rst  index.rst  install.rst  plot_1d.rst  plot_param_vs_param.rst  reference_api.rst
extinction_ensemble_props/: __init__.py  helpers.py  plot_1d_distributions.py  plot_many_param_vs_param.py  plot_param_vs_param.py  version.py
extinction_ensemble_props/data/: process_fit07.py  process_gor03.py  process_gor09_van23.py
extinction_ensemble_props/tests/: test_1d_dist.py  test_param_vs_param.py
extinction_ensemble_props/utils/: fit_full2dcor.py  pca_analysis.py  plot_cov_ellipses.py
